remove unnecessary and commented-out code; change instagram feed's z-index to 2 making it higher in the stack than the fixer element and thus not blocked by it anymore; tweak a few minor things like font-size of the certification labels and the link out to Instagram on each post; remove the black background of the heading because Instagram feed now scrolls over it making the need for a masking background color unnecessary

--- a/src/App.css
+++ b/src/App.css
@@ -352,7 +352,7 @@ tr {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  background: #000;
+  /*background: #000;*/
   padding: 40px 0 30px 0;
 }
 .logo {
@@ -417,6 +417,7 @@ tr {
   align-items: center;
 }
 .instagram-link {
+  font-size: 0.9em;
   color: #777;
   text-decoration: none;
 }
@@ -424,7 +425,7 @@ tr {
   text-decoration: underline;
 }
 .instagram-likes {
-  color: #777;
+  color: #f4ac33;
   text-align: right;
 }
 .instagram-caption {
@@ -496,7 +497,7 @@ tr {
     margin-right: 10px;
   }
   .certification-pair {
-    margin: 5px auto;
+    margin: 5px 10px;
     text-align: center;
     font-size: 0.75em;
   }
@@ -913,23 +914,20 @@ tr {
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 0;
+    z-index: 2;
   }
   #app-container {
     width: 100%;
     margin: 0 auto;
     text-align: right;
   }
-  .certification-pairs-container {
-    margin-top: 20px;
-  }
   .certification-pair p {
-    font-size: 0.75em;
+    font-size: 0.8em;
   }
   #foot {
     width: auto;
     text-align: center;
-    margin: 20px 0;
+    /*margin: 20px 0;*/
   }
   h2 {
     font-size: 1.75em;
